# knowledge-platform

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dev.sh  pyproject.toml  run.py  test_large.txt  test_small.txt
apps/: main.py
apps/kb_service/: __init__.py  main.py
apps/kb_service/api/: __init__.py  batch.py  callback.py  datasets.py  ingest.py  monitor.py  query.py  review.py
apps/kb_service/clients/: __init__.py  dify_client.py  ragflow_client.py
apps/kb_service/core/: __init__.py  config.py  exceptions.py  queue.py  utils.py
apps/kb_service/models/: __init__.py  audit_log.py  base.py  document_chunk.py  ingest_job.py
apps/kb_service/pipelines/: __init__.py  batch.py  ingest.py
apps/kb_service/repositories/: __init__.py  metadata.py
apps/kb_service/schemas/: __init__.py  ingest.py  job.py  review.py
apps/kb_service/services/: __init__.py  audit.py  job.py  metadata.py  preprocessor.py  router.py  split_docx.py  status.py
apps/kb_service/utils/: __init__.py  file_utils.py  split_docx_by_section.py
apps/kb_service/workers/: start_worker.py  tasks.py
apps/rbac/: __init__.py
apps/rbac/api/: __init__.py  apis.py  auditlog.py  auth.py  depts.py  menus.py  roles.py  users.py
apps/rbac/core/: exceptions.py  init_app.py  middlewares.py
config/settings/: config.py
deploy/: docker-compose.yml  web.conf
deploy/redis/: docker-compose.yml  redis-queue.sh
docs/: debug.md  docker-redis.md  git_operations.md  ingest-pipeline-orchestrator.md  kb_service_queue.md  next_step.md  openspec-superpowers-gstack.md  postgresql-migration-lessons.md  project_structure.md  test_ingest_rag1_docx-flow.md
docs/lesson/: docx-splitting-font-fix.md
docs/plan/: eval_feedback.md  rbac_refactor.md
scripts/: start_all.sh  start_rq_dashboard.sh
tests/: kb_service_test_demo.py  kb_service_test_split_docx.py  test_dify_client.py  test_dify_file_upload.py  test_dify_integration.py  test_ingest_api.py  test_ingest_pipeline.py  test_kb_service_utils.py  test_models.py  test_queue_functionality.py
web/: .env  package.json  pnpm-lock.yaml
(+45 files in other folders)
